# rag-agent-crewai-search

./: .env.example  LICENSE  Laudo_ground_truth.json  Laudo_schema.json  README.md  app.py  eval_dataset.json  extraction_eval.py  pyproject.toml  rag eval  rag_eval.py  requeriments.txt  requirements.txt  setup.sh  test_deploy.py
.github/workflows/: main.yml
src/agentic_rag/: crew.py
src/agentic_rag/config/: agents.yaml
src/agentic_rag/tools/: custom_tool.py
src_agentic_rag/: main.py
src_agentic_rag/config/: agents.yaml  task.yaml
src_agentic_rag/tools/: custom_tool.py
