[project]
name = "AI_Assistent_v8"
version = "0.1.0"
description = "agentic-rag using crewAI"
authors = [{ name = "William D.; Pierre", email = "williamp.alves01@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "transformers",
    "accelerate",
    "bitsandbytes", 
    "langchain-community"
]

[project.scripts]
agentic_rag = "agentic_rag.main:run"
run_crew = "agentic_rag.main:run"
train = "agentic_rag.main:train"
replay = "agentic_rag.main:replay"
test = "agentic_rag.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
